--- a/my-frontend/package.json
+++ b/my-frontend/package.json
@@ -1,11 +1,16 @@
 {
   "name": "my-frontend",
   "version": "0.1.0",
+  "peerDependencies": {
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
+  },
   "private": true,
   "dependencies": {
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1"
   },
   "scripts": {
