--- a/my-frontend/package.json
+++ b/my-frontend/package.json
@@ -7,10 +7,10 @@
   },
   "private": true,
   "dependencies": {
-    "cra-template": "1.2.0",
+    "cra-template": "^1.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.1.5",
+    "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1"
   },
   "scripts": {
