--- a/my-frontend/package.json
+++ b/my-frontend/package.json
@@ -7,6 +7,7 @@
   },
   "private": true,
   "dependencies": {
+    "axios": "^1.3.0",
     "cra-template": "^1.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
