--- a/my-frontend/package.json
+++ b/my-frontend/package.json
@@ -14,6 +14,9 @@
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1"
   },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.18.6"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
